--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -171,12 +171,14 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MarkerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MarkerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -346,6 +348,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\AccessDenied.cshtml" />
     <Content Include="Views\Account\EditProfile.cshtml" />
+    <Content Include="Views\Marker\Create.cshtml" />
+    <Content Include="Views\Marker\Delete.cshtml" />
+    <Content Include="Views\Marker\Details.cshtml" />
+    <Content Include="Views\Marker\Edit.cshtml" />
+    <Content Include="Views\Marker\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
