--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\201610080441451_MarkerModelChanged.Designer.cs">
       <DependentUpon>201610080441451_MarkerModelChanged.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610080526586_MarkerModelChanged2.cs" />
+    <Compile Include="Migrations\201610080526586_MarkerModelChanged2.Designer.cs">
+      <DependentUpon>201610080526586_MarkerModelChanged2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -371,6 +375,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610080441451_MarkerModelChanged.resx">
       <DependentUpon>201610080441451_MarkerModelChanged.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610080526586_MarkerModelChanged2.resx">
+      <DependentUpon>201610080526586_MarkerModelChanged2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
