--- a/GoGreenV3/Web.config
+++ b/GoGreenV3/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GoGreenV3-20161007091439.mdf;Initial Catalog=aspnet-GoGreenV3-20161007091439;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AgencyConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AgencyConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MarkerConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MarkerConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
