--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -18,7 +18,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -177,20 +177,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201610070235283_InitialCreate.cs" />
-    <Compile Include="Migrations\201610070235283_InitialCreate.Designer.cs">
-      <DependentUpon>201610070235283_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201610081039363_InitialCreate.cs" />
+    <Compile Include="Migrations\201610081039363_InitialCreate.Designer.cs">
+      <DependentUpon>201610081039363_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201610080642367_RegisterViewModelChanged.cs" />
-    <Compile Include="Migrations\201610080642367_RegisterViewModelChanged.Designer.cs">
-      <DependentUpon>201610080642367_RegisterViewModelChanged.cs</DependentUpon>
+    <Compile Include="Migrations\201610171139223_AgencyModelUpdate.cs" />
+    <Compile Include="Migrations\201610171139223_AgencyModelUpdate.Designer.cs">
+      <DependentUpon>201610171139223_AgencyModelUpdate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Agency.cs" />
+    <Compile Include="Models\AgencyModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MarkerModel.cs" />
+    <Compile Include="Models\ReportModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -381,6 +382,7 @@
     <Content Include="Views\Agency\Details.cshtml" />
     <Content Include="Views\Agency\Edit.cshtml" />
     <Content Include="Views\Agency\Index.cshtml" />
+    <Content Include="Views\Account\VerifyAccount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -389,11 +391,11 @@
     <Content Include="Scripts\jquery-3.1.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201610070235283_InitialCreate.resx">
-      <DependentUpon>201610070235283_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201610081039363_InitialCreate.resx">
+      <DependentUpon>201610081039363_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610080642367_RegisterViewModelChanged.resx">
-      <DependentUpon>201610080642367_RegisterViewModelChanged.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201610171139223_AgencyModelUpdate.resx">
+      <DependentUpon>201610171139223_AgencyModelUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -414,7 +416,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>5425</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:5425/</IISUrl>
+          <IISUrl>https://localhost:44300/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
