--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -383,6 +383,8 @@
     <Content Include="Views\Agency\Edit.cshtml" />
     <Content Include="Views\Agency\Index.cshtml" />
     <Content Include="Views\Account\VerifyAccount.cshtml" />
+    <Content Include="Views\Account\ResendConfirmationEmail.cshtml" />
+    <Content Include="Views\Account\ErrorEmailNotConfirm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
