--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -377,6 +377,7 @@
     <Content Include="Views\Account\VerifyAccount.cshtml" />
     <Content Include="Views\Account\ResendConfirmationEmail.cshtml" />
     <Content Include="Views\Account\ErrorEmailNotConfirm.cshtml" />
+    <Content Include="Views\Agency\AgencyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
