--- a/GoGreenV3/GoGreenV3.csproj
+++ b/GoGreenV3/GoGreenV3.csproj
@@ -254,6 +254,7 @@
     <Content Include="Images\Home\Fire.png" />
     <Content Include="Images\Home\Hospital.png" />
     <Content Include="Images\Home\Police.png" />
+    <Content Include="Images\logo.png" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
